recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:9: error: value < is not a member of List[Int]
  if(l.tail < l.head)
            ^Min:9: error: type mismatch;
 found   : Unit
 required: Int
  if(l.tail < l.head)
  ^